deploy/kubernetes/base/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  labels:
    app.kubernetes.io/part-of: knot
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  labels:
    app.kubernetes.io/part-of: knot
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-egress
  labels:
    app.kubernetes.io/part-of: knot
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: web
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: api
      ports:
        - port: 8080
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: gateway
      ports:
        - port: 8086
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: presence
      ports:
        - port: 8081
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: attachments
      ports:
        - port: 8082
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: push
      ports:
        - port: 8083
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-ingress
  labels:
    app.kubernetes.io/part-of: knot
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: web
      ports:
        - port: 8080
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-presence-ingress
  labels:
    app.kubernetes.io/part-of: knot
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: presence
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: web
      ports:
        - port: 8081
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-attachments-ingress
  labels:
    app.kubernetes.io/part-of: knot
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: attachments
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: web
      ports:
        - port: 8082
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-push-ingress
  labels:
    app.kubernetes.io/part-of: knot
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: push
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: web
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: api
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: router
      ports:
        - port: 8083
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-ingress
  labels:
    app.kubernetes.io/part-of: knot
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gateway
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: web
      ports:
        - port: 8086
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-router-ingress
  labels:
    app.kubernetes.io/part-of: knot
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: router
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: gateway
      ports:
        - port: 9091
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-delivery-ingress
  labels:
    app.kubernetes.io/part-of: knot
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: delivery
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: gateway
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: router
      ports:
        - port: 9092
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-egress
  labels:
    app.kubernetes.io/part-of: knot
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: api
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: push
      ports:
        - port: 8083
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
        - ipBlock:
            cidr: ::/0
      ports:
        - port: 5432
          protocol: TCP
        - port: 6379
          protocol: TCP
        - port: 6380
          protocol: TCP
        - port: 4317
          protocol: TCP
        - port: 4318
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-presence-egress
  labels:
    app.kubernetes.io/part-of: knot
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: presence
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
        - ipBlock:
            cidr: ::/0
      ports:
        - port: 6379
          protocol: TCP
        - port: 6380
          protocol: TCP
        - port: 4317
          protocol: TCP
        - port: 4318
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-attachments-egress
  labels:
    app.kubernetes.io/part-of: knot
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: attachments
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
        - ipBlock:
            cidr: ::/0
      ports:
        - port: 443
          protocol: TCP
        - port: 5432
          protocol: TCP
        - port: 4317
          protocol: TCP
        - port: 4318
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-push-egress
  labels:
    app.kubernetes.io/part-of: knot
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: push
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
        - ipBlock:
            cidr: ::/0
      ports:
        - port: 443
          protocol: TCP
        - port: 5432
          protocol: TCP
        - port: 4317
          protocol: TCP
        - port: 4318
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-egress
  labels:
    app.kubernetes.io/part-of: knot
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gateway
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: router
      ports:
        - port: 9091
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: delivery
      ports:
        - port: 9092
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
        - ipBlock:
            cidr: ::/0
      ports:
        - port: 6379
          protocol: TCP
        - port: 6380
          protocol: TCP
        - port: 4317
          protocol: TCP
        - port: 4318
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-router-egress
  labels:
    app.kubernetes.io/part-of: knot
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: router
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: delivery
      ports:
        - port: 9092
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: push
      ports:
        - port: 8083
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
        - ipBlock:
            cidr: ::/0
      ports:
        - port: 5432
          protocol: TCP
        - port: 6379
          protocol: TCP
        - port: 6380
          protocol: TCP
        - port: 4317
          protocol: TCP
        - port: 4318
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-delivery-egress
  labels:
    app.kubernetes.io/part-of: knot
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: delivery
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
        - ipBlock:
            cidr: ::/0
      ports:
        - port: 4222
          protocol: TCP
        - port: 5432
          protocol: TCP
        - port: 4317
          protocol: TCP
        - port: 4318
          protocol: TCP
